[package]
name = "icool"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.1"
actix-rt = "2.9.0"
sqlx = { version = "0.7.3", features = ["sqlite", "uuid", "runtime-tokio-rustls"] }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
dotenv = "0.15.0"

[dependencies.tokio]
version = "1.20.0"
features = ["full"]